# training_polars

./: .pre-commit-config.yaml  .prettierrc  README.md  pixi.toml  pyproject.toml
tests/: test_base.py
tests/dataframe/: test_001_create_dataframe.py  test_002_agg_dataframe.py  test_003_attributes_dataframe.py  test_004_computation_dataframe.py  test_005_selection.py  test_006_join.py
training_polars/polars/: __init__.py  agg.py
